--- a/projects/01_fyyur/starter_code/templates/forms/delete_venue.html
+++ b/projects/01_fyyur/starter_code/templates/forms/delete_venue.html
@@ -1,9 +1,9 @@
 {% extends 'layouts/main.html' %}
-{% block title %}Edit Venue{% endblock %}
+{% block title %}Delete Venue{% endblock %}
 {% block content %}
   <div class="form-wrapper">
-    <form class="form" method="POST, GET" action="/venues/{{venue.id}}/edit">
-      <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
+    <form class="form" method="POST, GET" action="/venue/{{venue.id}}/delete">
+      <h3 class="form-heading">Delete venue <em>{{ venue.name }}</em></h3>
       <div class="form-group">
         <label for="name">Name</label>
         {{ form.name(class_ = 'form-control', autofocus = true) }}
@@ -20,10 +20,6 @@
           </div>
       </div>
       <div class="form-group">
-        <label for="address">Address</label>
-        {{ form.address(class_ = 'form-control', autofocus = true) }}
-      </div>
-      <div class="form-group">
           <label for="phone">Phone</label>
           {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
         </div>
@@ -35,29 +31,29 @@
       <div class="form-group">
           <label for="facebook_link">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
-       </div>
+        </div>
       
-       <div class="form-group">
+      <div class="form-group">
           <label for="image_link">Image Link</label>
           {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
-       </div>
+      </div>
 
-       <div class="form-group">
-              <label for="website_link">Website Link</label>
-              {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
-        </div>
+      <div class="form-group">
+            <label for="website_link">Website Link</label>
+            {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+      </div>
 
-        <div class="form-group">
-             <label for="seeking_talent">Looking for Talent</label>
-             {{ form.seeking_talent(placeholder='Venue', autofocus = true) }}
-        </div>
+      <div class="form-group">
+          <label for="seeking_venue">Looking for Venues</label>
+          {{ form.seeking_venue(placeholder='Venue', autofocus = true) }}
+      </div>
 
-        <div class="form-group">
-            <label for="seeking_description">Seeking Description</label>
-            {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
-          </div>
+      <div class="form-group">
+          <label for="seeking_description">Seeking Description</label>
+          {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
+      </div>
       
-      <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
+      <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 {% endblock %}
