--- a/projects/01_fyyur/starter_code/templates/pages/home.html
+++ b/projects/01_fyyur/starter_code/templates/pages/home.html
@@ -17,6 +17,10 @@
 		<h3>
 			<a href="/shows/create"><button class="btn btn-default btn-lg">Post a show</button></a>
 		</h3>
+		<h3>
+			<a href="/venues/delete"><button class="btn btn-primary btn-lg">Delete a venue</button></a>
+		</h3>
+
 	</div>
 	<div class="col-sm-6 hidden-sm hidden-xs">
 		<img id="front-splash" src="{{ url_for('static',filename='img/front-splash.jpg') }}" alt="Front Photo of Musical Band" />
