--- a/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
@@ -2,7 +2,7 @@
 {% block title %}Edit Artist{% endblock %}
 {% block content %}
   <div class="form-wrapper">
-    <form class="form" method="POST, GET" action="/artists/{{artist.id}}/edit">
+    <form class="form" method="post" action="/artists/{{artist.id}}/edit">
       <h3 class="form-heading">Edit artist <em>{{ artist.name }}</em></h3>
       <div class="form-group">
         <label for="name">Name</label>
