--- a/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
@@ -2,7 +2,7 @@
 {% block title %}Edit Venue{% endblock %}
 {% block content %}
   <div class="form-wrapper">
-    <form class="form" method="POST, GET" action="/venues/{{venue.id}}/edit">
+    <form class="form" method="post" action="/venues/{{venue.id}}/edit">
       <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
