--- a/projects/01_fyyur/starter_code/templates/pages/artists.html
+++ b/projects/01_fyyur/starter_code/templates/pages/artists.html
@@ -2,6 +2,7 @@
 {% block title %}Fyyur | Artists{% endblock %}
 {% block content %}
 <ul class="items">
+	{% if artist %}
 	{% for artist in artists %}
 	<li>
 		<a href="/artists/{{ artist.id }}">
@@ -12,5 +13,9 @@
 		</a>
 	</li>
 	{% endfor %}
+	{% else %}
+	<h1> No artists found</h1>
+	{% endif %}
+
 </ul>
 {% endblock %}
