--- a/projects/01_fyyur/starter_code/templates/pages/venues.html
+++ b/projects/01_fyyur/starter_code/templates/pages/venues.html
@@ -1,6 +1,7 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Fyyur | Venues{% endblock %}
 {% block content %}
+{% if areas %}
 {% for area in areas %}
 <h3>{{ area.city }}, {{ area.state }}</h3>
 	<ul class="items">
@@ -16,4 +17,7 @@
 		{% endfor %}
 	</ul>
 {% endfor %}
+{% else %}
+<h1>No Venues to display</h1>
+{% endif %}
 {% endblock %}
