very new changes

--- a/projects/01_fyyur/starter_code/templates/forms/new_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/new_artist.html
@@ -55,4 +55,8 @@
       <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
+
+
+
 {% endblock %}
+<div class = "hidden" id = "error" style="display:none;"> Something went wrong! </div>
