--- a/projects/01_fyyur/starter_code/templates/layouts/form.html
+++ b/projects/01_fyyur/starter_code/templates/layouts/form.html
@@ -31,6 +31,9 @@
 <!-- scripts -->
 <script src="/static/js/libs/modernizr-2.8.2.min.js"></script>
 <!--[if lt IE 9]><script src="/static/js/libs/respond-1.4.2.min.js"></script><![endif]-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> 
+<script src="static/js/new_artist.js"></script>
+
 <!-- /scripts -->
 
 </head>
